--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,10 @@
-distributionBase=GRADLE_USER_HOME
+systemProp.http.proxyHost=www-proxy.us.oracle.com
+systemProp.http.proxyPort=80
+systemProp.https.proxyHost=www-proxy.us.oracle.com
+systemProp.https.proxyPort=80
+dstributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-2.9-bin.zip
+
