--- a/wercker.yml
+++ b/wercker.yml
@@ -14,7 +14,7 @@ dev:
         #export https_proxy=www-proxy.us.oracle.com:80
         #export HTTP_PROXY=www-proxy.us.oracle.com:80
         #export HTTPS_PROXY=www-proxy.us.oracle.com:80
-        ./gradlew -Dhttps.proxyHost=148.87.19.20 -Dhttps.proxyPort=80 -Dhttp.proxyHost=148.87.19.20 -Dhttp.proxyPort=80 bootRun
+        ./gradlew bootRun
 
     ### REPLACE the above script step with this internal/watch step to enable 
     ### dynamic rebuilding/reloading of the container in response to file changes.
@@ -32,4 +32,4 @@ build:
     - script:
         name: gradle build
         code: |
-          ./gradlew -Dhttps.proxyHost=148.87.19.20 -Dhttps.proxyPort=80 -Dhttp.proxyHost=148.87.19.20 -Dhttp.proxyPort=80 --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
+          ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
